crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__captures_with_type_string.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (identifier) @name :: string
---
[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "Test"
S3 "identifier"

[type_defs]
T0 = <String>
T1 = Struct  M0:1  ; { name }

[type_members]
M0: S1 → T0  ; name: <String>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 6 :: T1

[transitions]
_ObjWrap:
  0  -ε-  [Obj]                             2
  2       Trampoline                        3
  3  -ε-  [EndObj]                          5
  5                                         ▶

Test:
  6   !   (identifier) [Text Set(M0)]       8
  8                                         ▶
