crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__captures_wrapper_struct.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = {{(identifier) @id (number) @num} @row}* @rows
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "num"
S3 "row"
S4 "rows"
S5 "Test"
S6 "identifier"
S7 "number"

[type_defs]
T0 = <Node>
T1 = Struct  M0:2  ; { id, num }
T2 = Struct  M2:1  ; { row }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M3:1  ; { rows }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; num: <Node>
M2: S3 → T1  ; row: T1
M3: S4 → T3  ; rows: T3

[type_names]
N0: S5 → T4  ; Test

[entrypoints]
Test = 06 :: T4

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06  -ε-  [Arr]                            24, 09
  08                                        ▶
  09  -ε-  [EndArr Set(M3)]                 08
  11  -ε-  [EndObj Push]                    28, 09
  13  ─‣─  (number) [Node Set(M1) EndObj Set(M2)]  11
  16   !   [Obj] (identifier) [Node Set(M0)]  13
  18  -ε-                                   16
  19  -ε-  [Obj]                            18
  21  ─‣─  _                                19, 21
  23  ...  
  24   !   _                                19, 21
  26  ─‣─  _                                19, 26
  28  ─‣─  _                                19, 26
