crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__definitions_multiple.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Foo = (identifier) @id
Bar = (string) @str
---
[strings]
S0 "Beauty will save the world"
S1 "id"
S2 "str"
S3 "Foo"
S4 "Bar"
S5 "identifier"
S6 "string"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { id }
T2 = Struct  M1:1  ; { str }

[type_members]
M0: S1 → T0  ; id: <Node>
M1: S2 → T0  ; str: <Node>

[type_names]
N0: S3 → T1  ; Foo
N1: S4 → T2  ; Bar

[entrypoints]
Bar = 09 :: T2
Foo = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Foo:
  06   !   (identifier) [Node Set(M0)]      08
  08                                        ▶

Bar:
  09   !   (string) [Node Set(M1)]          11
  11                                        ▶
