crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__definitions_nested_capture.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Inner = (call_expression (identifier) @name)
Outer = (array {(Inner) @item}* @items)
---
[strings]
S0 "Beauty will save the world"
S1 "name"
S2 "item"
S3 "items"
S4 "Inner"
S5 "Outer"
S6 "call_expression"
S7 "identifier"
S8 "array"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { name }
T2 = Struct  M1:1  ; { item }
T3 = ArrayStar(T2)  ; T2*
T4 = Struct  M2:1  ; { items }

[type_members]
M0: S1 → T0  ; name: <Node>
M1: S2 → T1  ; item: Inner
M2: S3 → T3  ; items: T3

[type_names]
N0: S4 → T1  ; Inner
N1: S5 → T4  ; Outer

[entrypoints]
Inner = 06 :: T1
Outer = 12 :: T4

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Inner:
  06   !   (call_expression)                08
  07  ...  
  08  └‣─  (identifier) [Node Set(M0)]      10
  10  ─‣┘  _                                11
  11                                        ▶

Outer:
  12   !   (array)                          13
  13  -ε-  [Arr]                            36, 19
  15  -ε-                                   16
  16  ─‣┘  [EndArr Set(M2)] _               18
  18                                        ▶
  19  -ε-  [EndArr Set(M2)]                 18
  21  -ε-  [EndObj Push]                    40, 15
  23  ...  
  24  -ε-  [Set(M1)]                        21
  26  -ε-  [EndObj]                         24
  28   !   (Inner)                          06 : 26
  29  -ε-  [Obj]                            28
  31  ...  
  32  -ε-  [Obj]                            29
  34  ─‣─  _                                32, 34
  36  └‣─  _                                32, 34
  38  ─‣─  _                                32, 38
  40  ─‣─  _                                32, 38
