crates/plotnik-compiler/src/emit/snapshots/plotnik_compiler__emit__emit_tests__fields_negated.snap
---
source: crates/plotnik-compiler/src/emit/emit_tests.rs
---
Test = (import_specifier name: (identifier) @key -alias)
---
[strings]
S0 "Beauty will save the world"
S1 "key"
S2 "Test"
S3 "import_specifier"
S4 "identifier"
S5 "alias"
S6 "name"

[type_defs]
T0 = <Node>
T1 = Struct  M0:1  ; { key }

[type_members]
M0: S1 → T0  ; key: <Node>

[type_names]
N0: S2 → T1  ; Test

[entrypoints]
Test = 06 :: T1

[transitions]
_ObjWrap:
  00  -ε-  [Obj]                            02
  02       Trampoline                       03
  03  -ε-  [EndObj]                         05
  05                                        ▶

Test:
  06   !   -alias (import_specifier)        08
  08  └‣─  name: (identifier) [Node Set(M0)]  10
  10  ─‣┘  _                                11
  11                                        ▶
